--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout title="Home">
-    <h1>Home</h1>
+<Layout title="News and Updates">
+    <h1>news</h1>
 </Layout>
