--- a/src/pages/partners.astro
+++ b/src/pages/partners.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout title="Home">
-    <h1>Home</h1>
+<Layout title="Partners">
+    <h1>Partners</h1>
 </Layout>
