--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,6 +2,41 @@
 import Layout from "../layouts/Layout.astro"
 ---
 
+<!-- Including:
+“Your Name”
+“Your Email” 
+“Phone Number”
+“Your Message” -->
+
+
 <Layout title="Contact Us">
-    <h1>Contact Us</h1>
+
+    <main>
+        <h1>Contact Us</h1>
+
+        <form action="POST" action="/api/submit">
+            <div class="input">
+                <label for="fullname">Your Name</label>
+                <input type="text" id="fullname" name="fullname" required>
+            </div>
+
+            <div class="input">
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+
+            <div class="input">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phonenumber" required>
+            </div>
+
+            <div class="input">
+                <label for="msg">Your Message</label>
+                <textarea name="msg" id="msg" name="message" required></textarea>
+            </div>
+
+            <button type="submit">Submit</button>
+        </form>
+    </main>
+
 </Layout>
