--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,7 +15,7 @@ const h = 'd'
     <main>
         <h1>Contact Us</h1>
 
-        <form action="POST" action="/api/submit">
+        <form method="POST" action="/api/submit">
             <div class="input">
                 <label for="fullname">Your Name</label>
                 <input type="text" id="fullname" name="fullname" required>
@@ -33,7 +33,7 @@ const h = 'd'
 
             <div class="input">
                 <label for="msg">Your Message</label>
-                <textarea name="msg" id="msg" name="message" required></textarea>
+                <textarea id="msg" name="message" required></textarea>
             </div>
 
             <button type="submit">Submit</button>
