bug fix on menu

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,9 +44,9 @@
         mobileNav.removeAttribute("style");
       }, 0);
     } else {
-      navLInks.inert = false;
-      closeMobileMenu();
+      openBtn.setAttribute("aria-expanded", "false");
       mobileNav.removeAttribute("aria-hidden");
+      navLInks.inert = false;
     }
   }
 
