--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,8 @@
+---
+import MenuOpen from "../../public/menu-open.svg";
+import MenuClose from "../../public/menu-close.svg";
+---
+
 <header>
   <h1><a href="/">NeuroImpact Therapeutics</a></h1>
   <nav>
@@ -7,11 +12,11 @@
       aria-label="open menu"
       aria-controls="topnav-menu"
     >
-      <img src=`menu-open.svg` alt="" width="28" height="28" />
+      <MenuOpen width={28} height={28} />
     </button>
     <div id="topnav-menu" class="topnav-menu">
       <button class="topnav-close" aria-label="close menu">
-        <img src=`menu-close.svg` alt="" width="28" height="28" />
+        <MenuClose width={28} height={28} />
       </button>
       <ul>
         <li><a href="/">Home</a></li>
