--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="robots" content="noindex" />
     <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url" />
-    <title>CMS</title>
+    <title>Admin Dashboard</title>
   </head>
   <body>
     <h1>Admin</h1>
