sets up tinacms schema and displays news content

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
-import MenuOpen from "../../public/menu-open.svg";
-import MenuClose from "../../public/menu-close.svg";
+import MenuOpen from "../../public/assets/menu-open.svg";
+import MenuClose from "../../public/assets/menu-close.svg";
 ---
 
 <header>
