--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -1,7 +1,18 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import { getCollection } from "astro:content";
+const posts = await getCollection("news");
 ---
 
 <Layout title="News and Updates">
   <h1>news</h1>
+  <ul>
+    {
+      posts.map((post) => (
+        <li>
+          <a href={`/news/${post.slug}`}>{post.data.title}</a>
+        </li>
+      ))
+    }
+  </ul>
 </Layout>
