--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -4,7 +4,7 @@ import { getCollection } from "astro:content";
 const posts = await getCollection("news");
 ---
 
-<Layout title="News and Updates">
+<Layout title="News">
   <h1>news</h1>
   <ul>
     {
