--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import MenuClose from "../../public/assets/menu-close.svg";
 ---
 
 <header>
-  <h1><a href="/">NeuroImpact Therapeutics</a></h1>
+  <h1><a href="/">[logo]</a></h1>
   <nav>
     <button
       class="topnav-open"
