adds content and styles for main page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,12 @@
 <footer>
   <p>&copy; {new Date().getFullYear()} NeuroImpact Therapeutics</p>
-  <p>Email: hello@email.com</p>
-  <p>Address: North Bethesda, MD 20852</p>
+  <p>hello@email.com</p>
+  <p>North Bethesda, MD 20852</p>
 </footer>
+
+<style>
+  footer {
+    display: flex;
+    justify-content: space-between;
+  }
+</style>
