changes neuron image sizing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,7 @@ import bgDesign from "../assets/neural-web.png";
     top: -20%;
     left: -15%;
     width: 100%;
-    width: 1100px;
+    max-width: 1100px;
     height: auto;
     z-index: -1;
     /* transform: rotate(90deg); */
@@ -178,7 +178,7 @@ import bgDesign from "../assets/neural-web.png";
 
     .bg-design {
       top: 30%;
-      left: 50;
+      left: 0;
     }
   }
 </style>
