updates images to improve load time

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import heroImg from "../assets/homepage-brain.png";
-import aboutImg from "../assets/neural-web.png";
+import heroImg from "../assets/homepage-brain.webp";
+import aboutImg from "../assets/neural-web.webp";
 ---
 
 <Layout title="Home">
@@ -63,8 +63,7 @@ import aboutImg from "../assets/neural-web.png";
 
   .hero,
   .about {
-    /* min-height: 100vh; */
-    margin-block: 300px;
+    margin: 100px 0 200px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
