adds margin to about section to fix layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -153,8 +153,8 @@ import aboutImg from "../assets/neural-web.webp";
     h2 {
       max-width: 35ch;
     }
-
     .about {
+      margin-block-end: 400px;
     }
 
     .about-content {
