--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,6 +8,6 @@
   footer {
     display: flex;
     justify-content: space-between;
-    font-size: 0.8rem;
+    font-size: clamp(0.62rem, 1vw, 1rem);
   }
 </style>
